# polimondi

./: .gitignore  11-sturis.py  15-sturis.py  7-sturis.py  AGENTS.md  README.md  __init__.py
backtracking/: 13-sturis.py  17-sturis.py  5-sturis.py  7-sturis.py  9-sturis.py  (+1 more)
polyforms/: README.md  pyproject.toml  setup.py  setup.py.bak
polyforms/docs/: Readme.md  Release-Notes.md  Untitled.ipynb  b_darbs.ipynb  clean_notebooks.ps1  clean_notebooks.sh  drawings_in_cartesian.ipynb  environment_checks.ipynb  extreme_sequences.ipynb  inductive-constructions.ipynb  inductive-step6.ipynb  inductive_splits.ipynb  inductive_splits_acute.ipynb  jagged-triangle-extremes.ipynb  journal.ipynb  paper_2024-02-14.ipynb  poly_enumerate.ipynb  poly_extreme.ipynb  poly_extreme_acute.ipynb  poly_perfect_obtuse.ipynb  polyforms_demo.ipynb  presentation_pictures.ipynb  rewriting-systems.ipynb  tiny_polyiamonds.ipynb
polyforms/isoperimetric_polyiamonds/: NSturis.py  check_permutations.py
polyforms/src/polyforms/: README.md  __init__.py  backtrackk.py  check_permutations.py  draw_scene.py  geom_utilities.py  grammar.py  inductive_splits.py  magic_enum.py  n_gon.py  perfect_seq.py  point_tg.py  poly_geometry.py  polyiamond.py  search_all_small.py  search_perfect15.py  seq_storage.py  string_utilities.py  try.py
polyforms/tests/: drawing_script.py  test_draw_scene.py  test_drawings.py  test_geom_utilities.py  test_grammar.py  test_inductive_splits.py  test_magic_enum.py  test_nsturis.py  test_perfect_seq.py  test_point_tg.py  test_poly_geometry.py  test_polyiamond.py  test_seq_storage.py
(+468 files in other folders)
